--- a/latex/conclusions.tex
+++ b/latex/conclusions.tex
@@ -66,7 +66,10 @@ This work suggests a number of additional investigations:
 \begin{itemize}
 \item There are a number of alternatives for SpMV that target various matrix features (e.g., BELL, SELL, SELL-T, etc.) \cite{Kreutzer2012,SuKeutzer2012}. Some may be more beneficial than others. 
 
-\item ViennaCL has support for multiple backends, including the Intel Phi. Initial experiments result in performance $\frac{1}{10}$-th as fast as the K20 GPU. Those results are: a) limited by a beta driver for OpenCL on Intel Phi; and b) using OpenCL kernels intended for the GPU architecture. Targeting features of the Phi such as low-level vector instructions, . 
+\item ViennaCL has support for multiple backends, including the Intel Phi. Initial experiments result in performance $\frac{1}{10}$-th as fast as the K20 GPU. Those results are: a) limited by a beta driver for OpenCL on Intel Phi; and b) using OpenCL kernels intended for the GPU architecture. Targeting features of the Phi such as low-level vector instructions 
+
+\item  In an effort to improve strong and weak scaling of our distributed code, we may need to detect and adjust automatically to the cluster network topology. For example, the domain decomposition employed by \cite{Yokota2012} (i.e., a hierarchical decomposition for the fast multipole method) is known to fit well on fat-tree topologies such as the one found in the Itasca cluster. On top of topology concerns we also suspect that MPI communication can be improved with proper data packing and power-of-2 aligned messages. 
+
 \item 
 New features on NVidia Kepler level GPUs and CUDA v5 allow dynamic parallelism. Dynamic parallelism allows GPU kernels to spawn new kernels directly on the GPU without returning to the CPU. It provides stream priority features which allow kernels to preemptively execute out of order based on priority and dependencies. Such a feature is powerful for MPI support where the GPU can continue processing kernels while waiting on MPI communication to complete. 
 \item In Section~\ref{sec:epsilon_contours} we mention the need for stable methods to solve for weights. We have partially implemented the RBF-GA method from \cite{Fornberg2012}.  Initial exposure to the algorithm leaves the impression that the change of basis on the RHS is a nuisance. In effort to bypass the difficulty in deriving new RHS expressions, we plan to assemble complex DMs using DMs of lower (e.g., first-) order operators. See Appendix~\ref{app:indirect_weights} for details on how such DMs would be composed.
