Finished gordon's suggetions for chap 6

--- a/latex/conclusions.tex
+++ b/latex/conclusions.tex
@@ -68,7 +68,9 @@ This work suggests a number of additional investigations:
 
 \item ViennaCL has support for multiple backends, including the Intel Phi. Initial experiments result in performance $\frac{1}{10}$-th as fast as the K20 GPU. Those results are: a) limited by a beta driver for OpenCL on Intel Phi; and b) using OpenCL kernels intended for the GPU architecture. Targeting features of the Phi such as low-level vector instructions 
 
-\item  In an effort to improve strong and weak scaling of our distributed code, we may need to detect and adjust automatically to the cluster network topology. For example, the domain decomposition employed by \cite{Yokota2012} (i.e., a hierarchical decomposition for the fast multipole method) is known to fit well on fat-tree topologies such as the one found in the Itasca cluster. On top of topology concerns we also suspect that MPI communication can be improved with proper data packing and power-of-2 aligned messages. 
+\item  In an effort to improve strong and weak scaling of our distributed code, we may need to detect and adjust automatically to the cluster network topology. For example, the domain decomposition employed by \cite{Yokota2012} (i.e., a hierarchical decomposition for the fast multipole method) is known to fit well on fat-tree topologies such as the one found in the Itasca cluster. On top of topology concerns we also suspect that MPI communication can be improved with proper data packing and power-of-2 aligned messages.
+
+\item Although METIS functions well for general domain decompositions, it starts to fail at load balancing for decomposition for $p > 256$ processors. Many alternative algorithms and libraries exist for decomposition and graph partitioning. Future efforts will seek alternatives better at load balancing partitions for a large number of processors. 
 
 \item 
 New features on NVidia Kepler level GPUs and CUDA v5 allow dynamic parallelism. Dynamic parallelism allows GPU kernels to spawn new kernels directly on the GPU without returning to the CPU. It provides stream priority features which allow kernels to preemptively execute out of order based on priority and dependencies. Such a feature is powerful for MPI support where the GPU can continue processing kernels while waiting on MPI communication to complete. 
