--- a/latex/conclusions.tex
+++ b/latex/conclusions.tex
@@ -1,17 +1,22 @@
 \chapter{Final Discussion, Conclusions and Future Work}
 \label{chap:conclusions}
 
-This work is the first known investigation of the RBF-FD method applied to geophysical PDEs within the context of high performance computing. 
+This work is the first known investigation of the RBF-FD method applied to geophysical PDEs with a focus on high performance computing. The RBF-FD numerical method was chosen based on its low complexity ($O(N)$) and high order accuracy, as well as the ability to function on arbitrary grids and independent of the number of dimensions. In recent years the generalized FD method has rapidly gained popularity in atmospheric and geophysical science communities, but prior to this effort was limited to serial MATLAB implementations. 
 
-In Chapter~\ref{chap:gpu_rbffd}, our implementation of RBF-FD was ported to NVidia GPUs using OpenCL. Two OpenCL kernels designed to time-step to the solution of PDEs with an RK4 iteration 
+At the core of RBF-FD is the Sparse Matrix Vector multiply (SpMV). The SpMV operation performs a sparse dot product between every row of the matrix and a dense vector, and requires two floating point operations for every two elements of memory loaded. In double precision this translates to an operational intensity of $\frac{1}{8}$ FLOPs:Gbytes, which makes indicates a memory bound application with performance limited by the hardware bandwidth. 
+
+The goal of this dissertation was to scale RBF-FD solutions on high resolution meshes across high performance clusters, and to lead the way for its adoption within HPC and supercomputing circles. To that end we accomplished the following: 
+
+\begin{itemize}
+\item Chapter~\ref{chap:gpu_rbffd} presented the first implementation of RBF-FD ported to NVidia GPUs using OpenCL. Two approaches to OpenCL kernels designed to time-step to the solution of PDEs with an RK4 iteration 
+
+\item Chapter~\ref{chap:distributed_rbffd} introduced the design and tuning of the first distributed RBF-FD implementation for CPU and GPU clusters. The implementation scales well achieves 30\% to 40\% (strong and weak) parallel efficiency on 128 processors of the Itasca HPC cluster (CPU-only) at the University of Minnesota when given a problem size of $N=4096000$ nodes and stencil sizes between $n=17$ and $n=50$. 
+
+\item Our implementation leverages METIS for general domain decomposition and load balancing. Individual processes do not require a full mapping between RBF nodes and CPUs. Instead, processes assemble and operate on local linear systems for their subdomains. Communication between processes is limited to nearest-neighbor or all-to-subset collectives based on the intersection of subdomains. 
 
 
-Chapter~\ref{chap:distributed_rbffd} introduced the design and tuning of the first distributed RBF-FD implementation for CPU and GPU clusters. The implementation scales well achieves 30\% to 40\% (strong and weak) parallel efficiency on 128 processors of the Itasca HPC cluster (CPU-only) at the University of Minnesota when given a problem size of $N=4096000$ nodes and stencil sizes between $n=17$ and $n=50$. 
-
-Our implementation leverages METIS for general domain decomposition and load balancing. Individual processes do not require a full mapping between RBF nodes and CPUs. Instead, processes assemble and operate on local linear systems for their subdomains. Communication between processes is limited to nearest-neighbor or all-to-subset collectives based on the intersection of subdomains. 
-
-A number of tuning steps reduce communication times and increase scalability beyond the results in our first paper, \cite{BolligFlyerErlebacher2012}. Starting with an MPI\_Alltoallv collective, the tuning effort ultimately leads to a scheme which overlaps communication and computation on the CPU. Chapter~\ref{chap:multigpu_rbffd} extends this collective to overlap with computation on GPUs. 
-
+\item A number of tuning steps reduce communication times and increase scalability beyond the results in our first paper, \cite{BolligFlyerErlebacher2012}. Starting with an \texttt{MPI\_Alltoallv} collective, the tuning effort ultimately leads to a scheme which overlaps communication and computation on the CPU. Chapter~\ref{chap:multigpu_rbffd} extends this collective to overlap with computation on GPUs. 
+\end{itemize} 
 
 
 \begin{enumerate} 
@@ -66,15 +71,16 @@ This work suggests a number of additional investigations:
 \begin{itemize}
 \item There are a number of alternatives for SpMV that target various matrix features (e.g., BELL, SELL, SELL-T, etc.) \cite{Kreutzer2012,SuKeutzer2012}. Some may be more beneficial than others. 
 
-\item ViennaCL has support for multiple backends, including the Intel Phi. Initial experiments result in performance $\frac{1}{10}$-th as fast as the K20 GPU. Those results are: a) limited by a beta driver for OpenCL on Intel Phi; and b) using OpenCL kernels intended for the GPU architecture. Targeting features of the Phi such as low-level vector instructions 
+\item ViennaCL has support for multiple backends, including the Intel Phi. Initial experiments result in performance $\frac{1}{10}$-th as fast as the NVidia M2070 and K20 GPUs. Those results are: a) limited by a beta driver for OpenCL on Intel Phi; and b) using OpenCL kernels intended for the GPU architecture. Unleashing the hardware for the best performance for RBF-FD may require porting kernels to the low-level, hardware-specific vector instructions for the Intel Phi (see e.g., related work in \cite{ErlebacherSauleFlyerBollig2013}).
 
 \item  In an effort to improve strong and weak scaling of our distributed code, we may need to detect and adjust automatically to the cluster network topology. For example, the domain decomposition employed by \cite{Yokota2012} (i.e., a hierarchical decomposition for the fast multipole method) is known to fit well on fat-tree topologies such as the one found in the Itasca cluster. On top of topology concerns we also suspect that MPI communication can be improved with proper data packing and power-of-2 aligned messages.
 
-\item Although METIS functions well for general domain decompositions, it starts to fail at load balancing for decomposition for $p > 256$ processors. Many alternative algorithms and libraries exist for decomposition and graph partitioning. Future efforts will seek alternatives better at load balancing partitions for a large number of processors. 
+\item Although METIS functions well for general domain decompositions, it fails to properly load balancing our partitions for $p > 256$ processors. Many alternative algorithms and libraries exist for decomposition and graph partitioning that may prove better at load balancing for a large number of processors. 
 
 \item 
-New features on NVidia Kepler level GPUs and CUDA v5 allow dynamic parallelism. Dynamic parallelism allows GPU kernels to spawn new kernels directly on the GPU without returning to the CPU. It provides stream priority features which allow kernels to preemptively execute out of order based on priority and dependencies. Such a feature is powerful for MPI support where the GPU can continue processing kernels while waiting on MPI communication to complete. 
-\item In Section~\ref{sec:epsilon_contours} we mention the need for stable methods to solve for weights. We have partially implemented the RBF-GA method from \cite{Fornberg2012}.  Initial exposure to the algorithm leaves the impression that the change of basis on the RHS is a nuisance. In effort to bypass the difficulty in deriving new RHS expressions, we plan to assemble complex DMs using DMs of lower (e.g., first-) order operators. See Appendix~\ref{app:indirect_weights} for details on how such DMs would be composed.
+New features on NVidia Kepler level GPUs and CUDA v5.5 allow dynamic parallelism. Dynamic parallelism allows GPU kernels to spawn new kernels directly on the GPU without returning to the CPU. It provides stream priority features that allow kernels to preemptively execute out of order based on priority and dependencies. Such a feature is powerful for MPI support where the GPU can continue processing kernels while waiting on MPI communication to complete.
+ 
+\item In Section~\ref{sec:epsilon_contours} we mention the need for stable methods to solve for weights. We have partially implemented the RBF-GA method from \cite{Fornberg2012}.  Initial exposure to the algorithm leaves the impression that the change of basis on the RHS is a nuisance. In an effort to bypass the difficulty in deriving new RHS expressions, we plan to assemble complex DMs using DMs of lower (e.g., first-) order operators. See Appendix~\ref{app:indirect_weights} for details on how such DMs would be composed.
 \item Another major effort currently underway is the implicit solution of coupled PDEs with RBF-FD on multiple GPUs. Implicit methods assemble a sparse linear system that must be solved by either inverting the differentiation matrix directly (e.g., via a sparse LU decomposition), or by solving the system via a sparse iterative solver (e.g., GMRES or BiCGStab).
 Our effort adopts the iterative solver method, and we have implemented a multi-GPU preconditioned GMRES method in OpenCL similar to the CUDA implementation in \cite{Bahi2011}. The core operation within sparse iterative solvers is the SpMV. Therefore, all optimizations achieved in Chapters~\ref{chap:gpu_rbffd}, \ref{chap:distributed_rbffd}, and \ref{chap:multigpu_rbffd} continue to apply in this case. Additional details related to this effort are provided in Appendix~\ref{app:implicit_solver}.
 
